currency og experience gjort mere modulære, og gjort brug af ny polygon klasse